deployment/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otl-svc
spec:
  type: NodePort
  selector:
    app: otl-server
  ports:
  - protocol: TCP
    port: 58000
    targetPort: 58000
